# film-recommendation

./: .gitignore  nez  nez.pub  pyproject.toml
notebooks/: 01_eda_movielens.ipynb  03_content_based_filtering.ipynb  04_metrics_and_evaluation.ipynb  05_content_based.ipynb  07_feature_correlation.ipynb
src/data_processing/: data_loader.py  splitters.py
src/evaluation/: evaluator.py  visualisation.py
src/models/: cascading_hybrid.py  collaborative_filtering.py  content_based.py  hybrid.py  models.py  popular_baseline_model.py
src/utils/: logger.py
